add navigation (hard coded) add page extends base

--- a/webapp/templates/add.html
+++ b/webapp/templates/add.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html>
-	<head>
-        <meta charset="utf-8" />
-		<title>pi-stream | Add new media</title>
-	</head>
-	<body>
-		
-	</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Add new media{% endblock title %}
+
+{% block content %}
+  <div class="grid-container">
+  <h1>Media Items<h1>
+    <div class="grid-margin-x grid-x">
+    {% for media in media_items %}
+      <div class="small-3 cell">
+      <a href="{{  'media/'+ media.id | string }}">
+        <p>{{ media.title }}</p>
+        <div class='image'>
+          <img src="{{ media.thumbnail_url }}" />
+        </div>
+      </a>
+      </div>
+    {% endfor %}
+    <div>
+  </div>
+{% endblock content %}
