--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -5,16 +5,16 @@
     <!-- Compressed CSS --> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
     <!-- Compressed JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <title>pi-stream | {% block title %}{% endblock %}</title>
-    {% endblock %}
+    <title>pi-stream | {% block title %}{% endblock title %}</title>
+    {% endblock head %}
 </head>
 <body>
-  {% include 'navigation.html' %}
-    <div id="content">{% block content %}{% endblock %}</div>
-    <div id="footer">
-        {% block footer %}
-        &copy; Copyright 2020 by <a href="https://www.samueloverington.com/">Samuel Overington</a>.
-        {% endblock %}
-    </div>
+  <div id="navigation"> {% include 'navigation.html' %}</div>
+  <div id="content">{% block content %}{% endblock content %}</div>
+  <div id="footer">
+    {% block footer %}
+    &copy; Copyright 2020 by <a href="https://www.samueloverington.com/">Samuel Overington</a>.
+    {% endblock footer %}
+  </div>
 </body>
 </html>
