--- a/webapp/templates/navigation.html
+++ b/webapp/templates/navigation.html
@@ -1,10 +1,9 @@
 <div class="top-bar">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Site Title</li>
-      <li> <a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
+      <li class="menu-text">pi-stream</li>
+      <li> <a href="{{ url_for('index') }}">Home</a></li>
+      <li><a href="{{ url_for('add') }}">add</a></li>
     </ul>
   </div>
   <div class="top-bar-right">
