--- a/webapp/templates/home.html
+++ b/webapp/templates/home.html
@@ -1,20 +1,16 @@
+{#
+
+file: media-single.html
+
+  Home Page
+
+#}
+
 {% extends "base.html" %}
 
-{% block title %}{{ media.title }}{% endblock %}
+{% block title %} Home {% endblock %}
 
 
 {% block content %}
-  <div class="grid-container">
-    <h1>{{ media.title }}<h1>
-    <div class="grid-margin-x grid-x">
-     <div class="small-2 cell"> . </div>
-     <div class="small-8 cell">
-       <video width="320" height="240" controls>
-         <source src="{{ media.url }}" type="{{ media.type }}">
-          Your browser does not support the video tag.
-       </video>
-     </div>
-     <div class="small-2 cell"> . </div>
-    </div>
-  </div>
+{% include 'media-grid.inc' %}
 {% endblock content %}
