--- a/webapp/templates/media-single.html
+++ b/webapp/templates/media-single.html
@@ -15,12 +15,16 @@ file: media-single.html
   <div class="grid-container">
     <h1>{{  media.title  }}</h1>
     <div class="grid-margin-x grid-x">
-     <div class="small-2 cell"> . </div>
-     <video class="small-8 cell" controls>
-       <source src="{{  url_for('static', filename=media.file_name)  }}" type="{{  media.type  }}">
-        Your browser does not support the video tag.
-     </video>
-     <div class="small-2 cell"> . </div>
+     <div class="small-2 cell">  </div>
+     <div class="small-8 cell">
+       <video class="cell" controls poster="{{  url_for('static', filename=media.thumbnail)  }}" >
+         <source src="{{  url_for('static', filename=media.file_name)  }}" type="{{  media.type  }}"
+           poster="{{  url_for('static', filename=media.thumbnail)  }}" >
+             Your browser does not support the video tag.
+       </video>
+       <p>{{ media.description }}</p>
+     </div>
+     <div class="small-2 cell">  </div>
     </div>
   </div>
 {% endblock content %}
