--- a/webapp/templates/navigation.html
+++ b/webapp/templates/navigation.html
@@ -1,11 +1,9 @@
 <div class="top-bar">
-  <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">pi-stream</li>
-      <li> <a href="{{ url_for('index') }}">Home</a></li>
-      <li><a href="{{ url_for('add') }}">add</a></li>
-    </ul>
-  </div>
+  <ul class="menu" data-dropdown-menu>
+    <li class="menu-text">pi-stream</li>
+    <li> <a href="{{ url_for('index') }}">Home</a></li>
+    <li><a href="{{ url_for('add') }}">add</a></li>
+  </ul>
   <div class="top-bar-right">
     <ul class="menu">
       <li><input type="search" placeholder="Search"></li>
